// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TitleElements FourthLevelTitleStyle snapshot by default 1`] = `
.c0 {
  font-size: 12px;
}

.c0.not-great-cause-proposal {
  margin: 0 0 15px;
}

@media (min-width:969px) {
  .c0 {
    font-size: 16px;
  }
}

@media (min-width:1140px) {
  .c0 {
    font-size: 18px;
  }
}

<h4
  className="c0"
>
  H4
</h4>
`;

exports[`TitleElements SecondLevelTitleStyle snapshot by default 1`] = `
.c0 {
  font-size: 20px;
}

@media (min-width:767px) {
  .c0 {
    font-size: 26px;
  }
}

@media (min-width:969px) {
  .c0 {
    font-size: 30px;
  }
}

<h2
  className="c0"
>
  H2
</h2>
`;

exports[`TitleElements ThirdLevelTitleStyle snapshot by default 1`] = `
.c0 {
  font-size: 16px;
}

@media (min-width:767px) {
  .c0 {
    font-size: 18px;
  }
}

@media (min-width:969px) {
  .c0 {
    font-size: 20px;
  }
}

@media (min-width:1140px) {
  .c0 {
    font-size: 22px;
  }
}

<h3
  className="c0"
>
  H3
</h3>
`;
